Add currency price columns to order table

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,6 +23,6 @@
     "resolveFullPaths": true,
     "verbose": false
   },
-  "include": ["src"],
+  "include": ["src", "src/drizzle.config.ts"],
   "exclude": ["node_modules"]
 }
