--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.62.15",
@@ -21,6 +22,7 @@
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@hookform/devtools": "^4.3.3",
     "@tanstack/eslint-plugin-query": "^5.62.15",
     "@tanstack/react-query-devtools": "^5.63.0",
     "@tanstack/router-devtools": "^1.95.1",
