--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-router": "^1.95.1",
     "@tanstack/react-table": "^8.20.6",
