--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "node": ">=22"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "express": "^4.21.1",
@@ -25,6 +27,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
     "drizzle-kit": "^0.27.0",
     "rimraf": "^6.0.1",
