--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,8 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-scan": "^0.3.3",
@@ -47,8 +47,8 @@
     "@tanstack/router-devtools": "^1.95.1",
     "@tanstack/router-plugin": "^1.95.1",
     "@types/node": "^22.10.5",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
