--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
     "drizzle-kit": "^0.27.0",
