feat: enhance seeding scripts for loading and unloading places with faker data
- Updated loadingPlace seed to generate 999 entries using faker for placeID.
- Modified unloadingPlace seed to generate 999 entries using faker for placeID.
- Refactored order seed to create 999 fake orders and append them to a JSON file.
- Introduced Filters interface for pagination and sorting parameters validation.
- Removed obsolete QueryParams interface.
- Improved error logging in file append function.
- Cleaned up server.ts by removing commented-out seed function and organizing imports.
- Adjusted tsconfig to include only necessary files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 services:
+  # fronted:
+  #  build: ./client
+  #  ports:
+  #   - '5173:5173'
+  #  volumes:
+  #   - ./client:/app
   db:
     image: postgres
     environment:
