--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,10 @@
     "node": ">=22"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.36.0",
+    "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.5.1",
     "express": "^4.21.1",
     "postgres": "^3.4.5",
@@ -28,9 +29,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
-    "drizzle-kit": "^0.27.0",
+    "drizzle-kit": "^0.31.4",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.19.2",
