feat: implement JWT authentication with login, logout, and token refresh functionality; add user management routes and services

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,12 +13,12 @@
     "skipLibCheck": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitAny": true,
-
-    "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
+
   "tsc-alias": {
     "resolveFullPaths": true,
     "verbose": false
