--- a/server/package.json
+++ b/server/package.json
@@ -15,21 +15,24 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=22"
+    "node": ">=20"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.5.1",
     "express": "^4.21.1",
+    "jose": "^6.1.0",
     "postgres": "^3.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
     "drizzle-kit": "^0.31.4",
